# edutap.wallet_apple

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pass.pkpass  private_key.pem  public_key.pem  pyproject.toml  semantic.md  serializer.ipynb  signature.sig  signed_message.p7s  test.ipynb  tox.ini  tox.sh
.github/workflows/: release.yaml  tests.yaml
docs/: index.md  installation.md  integration.md  lifecycle.md  nfc.md  reference.md
src/edutap/wallet_apple/: api.py  crypto.py  models.py  plugins.py  protocols.py  settings.py
src/edutap/wallet_apple/handlers/: fastapi.py  models.py
src/edutap/wallet_apple/models/: datatypes.py  enums.py  handlers.py  passes.py  semantic_tags.py  storage.py
src/edutap/wallet_apple/webservice/: protocol.py
tests/: common.py  conftest.py  entrypoints.py  plugins.py  test_api.py  test_dynamic_settings.py  test_handlers_fastapi.py  test_integration.py  test_model.py  test_plugins.py  test_semantic_tags.py  test_settings.py
tests/data/: .env-testing
tests/data/certs/: private.key
tests/data/generated_passes/: basic_pass.pkpass  eventticket.pkpass  loyaltypass_nfc.pkpass
tests/data/jsons/: boarding_pass.json  ecca25-gala-broken.json  ecca25-gala.json  semantic-fields-pass.json  semantic-fields-pass1.json
tests/data/resources/: basic_pass.pkpass
tests/data/test_wallet_apple_plugins/: plugins.py
tests/data/unsigned-passes/: 1234.pkpass  pass.json
