[project]
name = "edutap.wallet_apple"
version = "1.0.0a1.dev0"
description = "Library for Apple Wallet Communication"
keywords = ["wallet", "Apple", "api", "pass"]
readme = "README.md"
authors = [
    {name = "Philipp Auersperg-Castell", email = "phil@bluedynamics.com"},
    {name = "Alexander Loechel", email = "Alexander.Loechel@lmu.de"},
    {name = "Jens Klein", email = "jk@kleinundpartner.at"},
    {name = "Robert Niederreiter", email = "rnix@squarewave.at"},
]
requires-python = ">=3.10"
license = { text = "EUPL 1.2" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic[email]>=2.10.3",
    "python-dotenv",
    "cryptography",
    "typing_extensions",
    "pydantic-settings>=2.6.1",
    "pyyaml",
    "types-PyYAML"
]

[project.urls]
Source = "https://github.com/edutap-eu/edutap.wallet_apple"
Issues = "https://github.com/edutap-eu/edutap.wallet_apple/issues"
Documentation = "https://docs.edutap.eu/packages/edutap_wallet_apple/index.html"

[project.optional-dependencies]
test = [
    "pytest",
    "requests-mock",
]
typecheck  = [
    "mypy",
    "types-requests",
    "pytest-stub",
]
develop = [
    "pdbpp",
    "ipython",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edutap"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
markers = [
    "integration: Test are running against the real Apple Wallet API, needs account configuration. (deselect with '-m \"not integration\"')",
]

[tool.mypy]
mypy_path = "./src:./tests"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "cryptography.*",
]
ignore_missing_imports = true

[tool.isort]
profile = "plone"
src_paths = ["src", "tests"]

[tool.black]
target-version = ["py310"]
include = "src,tests"

[tool.codespell]
ignore-words-list = "discreet,"

[tool.check-manifest]
ignore = [
    ".editorconfig",
    ".pre-commit-config.yaml",
    "tox.ini",
    ".flake8",
]
